# rcore-utils

./: .gitignore  Cargo.toml
src/: main  main.rs
tools/: gen_bin_directories.rs
