[package]
name = "rcore-utils"
version = "0.1.0"
edition = "2021"

[dependencies]

[lib]
name="core_lib"
path="src/lib/lib.rs"

[[bin]]
name="arch"
path="src/bin/arch/main.rs"

[[bin]]
name="b2sum"
path="src/bin/b2sum/main.rs"

[[bin]]
name="base32"
path="src/bin/base32/main.rs"

[[bin]]
name="base64"
path="src/bin/base64/main.rs"

[[bin]]
name="basename"
path="src/bin/basename/main.rs"

[[bin]]
name="basenc"
path="src/bin/basenc/main.rs"

[[bin]]
name="cat"
path="src/bin/cat/main.rs"

[[bin]]
name="chcon"
path="src/bin/chcon/main.rs"

[[bin]]
name="chgrp"
path="src/bin/chgrp/main.rs"

[[bin]]
name="chmod"
path="src/bin/chmod/main.rs"

[[bin]]
name="chown"
path="src/bin/chown/main.rs"

[[bin]]
name="chroot"
path="src/bin/chroot/main.rs"

[[bin]]
name="cksum"
path="src/bin/cksum/main.rs"

[[bin]]
name="comm"
path="src/bin/comm/main.rs"

[[bin]]
name="coreutils"
path="src/bin/coreutils/main.rs"

[[bin]]
name="cp"
path="src/bin/cp/main.rs"

[[bin]]
name="csplit"
path="src/bin/csplit/main.rs"

[[bin]]
name="cut"
path="src/bin/cut/main.rs"

[[bin]]
name="date"
path="src/bin/date/main.rs"

[[bin]]
name="dd"
path="src/bin/dd/main.rs"

[[bin]]
name="df"
path="src/bin/df/main.rs"

[[bin]]
name="dir"
path="src/bin/dir/main.rs"

[[bin]]
name="dircolors"
path="src/bin/dircolors/main.rs"

[[bin]]
name="dirname"
path="src/bin/dirname/main.rs"

[[bin]]
name="du"
path="src/bin/du/main.rs"

[[bin]]
name="echo"
path="src/bin/echo/main.rs"

[[bin]]
name="env"
path="src/bin/env/main.rs"

[[bin]]
name="expand"
path="src/bin/expand/main.rs"

[[bin]]
name="expr"
path="src/bin/expr/main.rs"

[[bin]]
name="factor"
path="src/bin/factor/main.rs"

[[bin]]
name="false"
path="src/bin/false/main.rs"

[[bin]]
name="fmt"
path="src/bin/fmt/main.rs"

[[bin]]
name="fold"
path="src/bin/fold/main.rs"

[[bin]]
name="groups"
path="src/bin/groups/main.rs"

[[bin]]
name="head"
path="src/bin/head/main.rs"

[[bin]]
name="hostid"
path="src/bin/hostid/main.rs"

[[bin]]
name="hostname"
path="src/bin/hostname/main.rs"

[[bin]]
name="id"
path="src/bin/id/main.rs"

[[bin]]
name="install"
path="src/bin/install/main.rs"

[[bin]]
name="join"
path="src/bin/join/main.rs"

[[bin]]
name="kill"
path="src/bin/kill/main.rs"

[[bin]]
name="link"
path="src/bin/link/main.rs"

[[bin]]
name="ln"
path="src/bin/ln/main.rs"

[[bin]]
name="logname"
path="src/bin/logname/main.rs"

[[bin]]
name="ls"
path="src/bin/ls/main.rs"

[[bin]]
name="md5sum"
path="src/bin/md5sum/main.rs"

[[bin]]
name="mkdir"
path="src/bin/mkdir/main.rs"

[[bin]]
name="mkfifo"
path="src/bin/mkfifo/main.rs"

[[bin]]
name="mknod"
path="src/bin/mknod/main.rs"

[[bin]]
name="mktemp"
path="src/bin/mktemp/main.rs"

[[bin]]
name="mv"
path="src/bin/mv/main.rs"

[[bin]]
name="nice"
path="src/bin/nice/main.rs"

[[bin]]
name="nl"
path="src/bin/nl/main.rs"

[[bin]]
name="nohup"
path="src/bin/nohup/main.rs"

[[bin]]
name="nproc"
path="src/bin/nproc/main.rs"

[[bin]]
name="numfmt"
path="src/bin/numfmt/main.rs"

[[bin]]
name="od"
path="src/bin/od/main.rs"

[[bin]]
name="paste"
path="src/bin/paste/main.rs"

[[bin]]
name="pathchk"
path="src/bin/pathchk/main.rs"

[[bin]]
name="pinky"
path="src/bin/pinky/main.rs"

[[bin]]
name="pr"
path="src/bin/pr/main.rs"

[[bin]]
name="printenv"
path="src/bin/printenv/main.rs"

[[bin]]
name="printf"
path="src/bin/printf/main.rs"

[[bin]]
name="ptx"
path="src/bin/ptx/main.rs"

[[bin]]
name="pwd"
path="src/bin/pwd/main.rs"

[[bin]]
name="readlink"
path="src/bin/readlink/main.rs"

[[bin]]
name="realpath"
path="src/bin/realpath/main.rs"

[[bin]]
name="rm"
path="src/bin/rm/main.rs"

[[bin]]
name="rmdir"
path="src/bin/rmdir/main.rs"

[[bin]]
name="runcon"
path="src/bin/runcon/main.rs"

[[bin]]
name="seq"
path="src/bin/seq/main.rs"

[[bin]]
name="sha1sum"
path="src/bin/sha1sum/main.rs"

[[bin]]
name="sha224sum"
path="src/bin/sha224sum/main.rs"

[[bin]]
name="sha256sum"
path="src/bin/sha256sum/main.rs"

[[bin]]
name="sha384sum"
path="src/bin/sha384sum/main.rs"

[[bin]]
name="sha512sum"
path="src/bin/sha512sum/main.rs"

[[bin]]
name="shred"
path="src/bin/shred/main.rs"

[[bin]]
name="shuf"
path="src/bin/shuf/main.rs"

[[bin]]
name="sleep"
path="src/bin/sleep/main.rs"

[[bin]]
name="sort"
path="src/bin/sort/main.rs"

[[bin]]
name="split"
path="src/bin/split/main.rs"

[[bin]]
name="stat"
path="src/bin/stat/main.rs"

[[bin]]
name="stdbuf"
path="src/bin/stdbuf/main.rs"

[[bin]]
name="stty"
path="src/bin/stty/main.rs"

[[bin]]
name="sum"
path="src/bin/sum/main.rs"

[[bin]]
name="sync"
path="src/bin/sync/main.rs"

[[bin]]
name="tac"
path="src/bin/tac/main.rs"

[[bin]]
name="tail"
path="src/bin/tail/main.rs"

[[bin]]
name="tee"
path="src/bin/tee/main.rs"

[[bin]]
name="test"
path="src/bin/test/main.rs"

[[bin]]
name="timeout"
path="src/bin/timeout/main.rs"

[[bin]]
name="touch"
path="src/bin/touch/main.rs"

[[bin]]
name="tr"
path="src/bin/tr/main.rs"

[[bin]]
name="true"
path="src/bin/true/main.rs"

[[bin]]
name="truncate"
path="src/bin/truncate/main.rs"

[[bin]]
name="tsort"
path="src/bin/tsort/main.rs"

[[bin]]
name="tty"
path="src/bin/tty/main.rs"

[[bin]]
name="uname"
path="src/bin/uname/main.rs"

[[bin]]
name="unexpand"
path="src/bin/unexpand/main.rs"

[[bin]]
name="uniq"
path="src/bin/uniq/main.rs"

[[bin]]
name="unlink"
path="src/bin/unlink/main.rs"

[[bin]]
name="uptime"
path="src/bin/uptime/main.rs"

[[bin]]
name="users"
path="src/bin/users/main.rs"

[[bin]]
name="vdir"
path="src/bin/vdir/main.rs"

[[bin]]
name="wc"
path="src/bin/wc/main.rs"

[[bin]]
name="who"
path="src/bin/who/main.rs"

[[bin]]
name="whoami"
path="src/bin/whoami/main.rs"

[[bin]]
name="yes"
path="src/bin/yes/main.rs"
